=======
CHANGES
=======

1.2.1 (unreleased)
------------------

* ...

1.2.0 (2009-02-26)
------------------

* Add support for context-specific templates. Now, templates can be
  registered and looked up using (view, request, context) triple.
  To do that, pass the ``context`` argument to the ZCML directives.
  The ``getPageTemplate`` and friends will now try to lookup context
  specific template first and then fall back to (view, request) lookup.

* Allow use of ``z3c.pt`` using ``z3c.ptcompat`` compatibility layer.

* Forward the template kwargs to the options of the macro

* Changed package's mailing list address to zope-dev at zope.org
  instead of retired one.

1.1.0 (2007-10-08)
------------------

* Added an ``IContentTemplate`` interface which is used for 
  ``<z3c:template>``.

1.0.0 (2007-??-??)
------------------

* Initial release.