@@ -1,3 +1,0 @@
-<data-files zopeskel/etc/package-includes>
-  z3c.template-*.zcml
-</data-files>
